--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
     <!-- shared -->
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-shared-utils</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-artifact-transfer</artifactId>
       <version>0.10.0</version>
     </dependency>
